moved delete icon out of div to fix title not aligning correctly

--- a/app/assets/stylesheets/pages/_planner.scss
+++ b/app/assets/stylesheets/pages/_planner.scss
@@ -168,11 +168,19 @@
   justify-content: space-between;
 }
 
-.card-title-add, .card-title-remove {
+.card-title-add {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
 }
 
+.card-title-remove {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
 
+  h6 {
+    color: black;
+  }
+}
 
